# my_qt512_app

./: CMakeLists.txt  Calculator.cpp  Calculator.h  english.ts  french.ts  main.cpp  main.qml
